# isye_6644_mp1

./: .gitignore  Answers.docx  ISyE 6644 Mini-Project 1_ Pandemic Flu Spread.docx  Project_1_Flu.py  Project_1_Flu_King.py  README.md  Rodgers - figure edits.rtf  binimial experiment.Rmd  binimial experiment.nb.html  p_range.csv  pyproject.toml
documentation/: Planner_notes.xlsx
src/: miniproject 1 R-J-D - with day of week mod.ipynb  mp1.py  test.py
src/figs/: day2_dist.csv  p_range.csv
