[tool.poetry]
name = "isye_6644_mp1"
version = "1.0.0"
description = "ISYE 6644 MP1"
authors = ["Robert King <robert.f1.king@gatech.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
argparse = "^1.4.0"
pandas = "^1.2.5"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
scipy = "^1.7.0"
statistics = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
